# tgwsproxy

./: .gitignore  Dockerfile  README.md  app.py  icon.icns  linux.py  macos.py  pyproject.toml  requirements-macos.txt  requirements.txt  windows.py
.github/workflows/: build.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/flowseal/tgwsproxy/: AndroidSystemStatus.kt  LogViewerActivity.kt  MainActivity.kt  ProxyForegroundService.kt  PythonProxyBridge.kt  TelegramProxyIntent.kt
android/app/src/main/python/: android_proxy_bridge.py
android/app/src/main/res/drawable/: ic_proxy_notification.xml
android/app/src/main/res/layout/: activity_log_viewer.xml  activity_main.xml
android/app/src/main/res/values/: strings.xml
packaging/: build_macos_universal.sh  create_dmg.sh  create_icon.sh  linux.spec  macos.spec  merge_universal2.sh  windows.spec
proxy/: crypto_backend.py  tg_ws_proxy.py  tgwsproxy.py
tests/: test_android_proxy_bridge.py  test_crypto_mtproto.py
